Add math functions to Basic HTML 3
Displays results of various math functions

--- a/Basic_JS_strings.html
+++ b/Basic_JS_strings.html
@@ -6,6 +6,7 @@
 	</head>
 	<body>
         <script src="./JS/Basic_JS_strings.js"></script>
-        
+
+        <p id="theMeaning"></p>
 	</body>
 </html>
