--- a/TicTacToe/tictactoe.html
+++ b/TicTacToe/tictactoe.html
@@ -140,7 +140,7 @@
             <div class="console_Right">
                 <div class="displayBox boxRight">
                     <Strong>Configuration:</strong><br><br>
-                    <label>Player 1: </label><select id="player1"><option value="X">X</option><option value="O">O</option></select><br>
+                    <label>Player 1: </label><select id="player1"><option value="O">O</option><option value="X">X</option></select><br>
                     <label>Player 2: </label><select id="player2"><option value="X">X</option><option value="O">O</option></select><br>
                     <button id="settingsBtn" onclick="saveSettings()">Save Configuration</button>
                 </div>
