--- a/Pizza-Project/Pizza.html
+++ b/Pizza-Project/Pizza.html
@@ -3,7 +3,7 @@
 	<head>
         <META HTTP-EQUIV="Content-Type" CONTENT="text/html"; charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="">
+        <meta name="description" content="Simple pizza builder which tallies toppings and price">
         <meta name="author" content="Andy Schultheiss">
         <link rel="stylesheet" type="text/css" href="./css/pizza_css.css">
 
